- Added a shortcut /fz for /freeze.
- Added new, better CTF and removed the old one. It's pretty much ready to go right out-of-the-box, just type /ctf.
- Added a lives system to Lava Survival, so players actually have to worry about killer lava/water. You can set the number of lives in the properties.
- Added Global Chat to the chat tab in the GUI.
- Added commands:
	- /nyan - 100% self-explanatory!
	- /warp - For the new warp system!
- Removed commands:
	- /drop - Old CTF command, not needed.
	- /team - Old CTF command, not needed.
- Removed that stupid button next to the command input box.
- Removed the Updater button and the useless text box next to it
- Removed Restarter.exe and Restarter.pdb
- Removed bash and batch files related to Updating (no longer needed)
- Made improvements to leaf decay, should be more random now.
- Made it so command and block change errors show the error info in-game.
- Made it so that /inv will send a message to the user if the target (or themselves) has had invincible mode enabled/disabled.
- Made it so you can use /inv on another person from console. 
- Disabled color codes in Global Chat, it's just too risky with the exploits.
- Added Suppot for SQLite3
- Added new help category, 'game'
- New doors
	- All colours are now represented (/door_orange, /door_cyan, /door_pink etc.)
- Added warps (/warp)
- Fixed fireworks leaving blocks behind
- Fixed an error where /rankmsg wouldn't send the whole message, only the first word.
- Waypoints are now saved
- Hard-Coded command permissions are now editable (GUI and a seperate .properties file)

v5.2.0.0
- Fixed the server-breaking freeze bug that happened when a player lagged (NOT logged) out.
- Fixed several possible memory leaks.
- Fixed /moveall and /map in the console.
- Fixed /click for guests.
- Fixed /pyramid so it respects block limits.
- Fixed /unload empty.
- Fixed /hide and /xhide to use custom login/logout messages.