@@ -125,6 +125,8 @@ namespace MCForge
                     totalTriesStream = 0;
 
                     beat.Prepare();
+                    if (beat.GetType() == typeof(MinecraftBeat))    
+                        File.WriteAllText("text/heartbeaturl.txt", beat.URL + "?" + beat.Parameters);
 
                     // Set all the request settings
                     //Server.s.Log(beat.Parameters);
